# Zalmoxis

./: .codecov.yml  .gitignore  .readthedocs.yaml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  get_zalmoxis.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml  tests-integration.json  tests-total.json  tests-unit.json
.github/: pull_request_template.md
.github/badges/: tests-integration.json  tests-slow.json  tests-smoke.json  tests-total.json  tests-unit.json
.github/workflows/: CI.yml  CODEOWNERS  docs.yml  nightly.yml  publish-test-badges.yml  publish.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
configuration/: index.html
data/: index.html  radiusdensityEarthBoujibar.txt  radiusdensityMarsBoujibar.txt  radiusdensityMercuryBoujibar.txt  radiusdensitySeager.txt  radiusdensityWagner.txt  radiusgravityWagner.txt  radiuspressureEarthBoujibar.txt  radiuspressureMarsBoujibar.txt  radiuspressureMercuryBoujibar.txt  radiuspressureWagner.txt  radiustemperatureWagner.txt
docs/: configuration.md  contact.md  data.md  getting_started.md  index.md  installation.md  model.md  proteus-framework.md  usage.md
docs/Community/: contact.md
docs/Explanations/: binodal.md  code_architecture.md  eos_physics.md  mixing.md  model.md  process_flow.md  proteus_coupling.md  testing.md  verification.md
docs/How-to/: build_tests.md  configuration.md  grids.md  installation.md  proteus_coupling.md  releasing.md  testing.md  usage.md
docs/Reference/: api.md  data.md
docs/Tutorials/: firstrun.md
docs/javascripts/: expand.js  header-links.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
input/: bench_performance.toml  default.toml  temp_profile.txt  test_5me_structure.toml
input/grids/: h2_mixing.toml  h2o_mixing.toml  mass_radius.toml  mass_temperature.toml  strong_partition.toml
installation/: index.html
model/: index.html
search/: search_index.json
src/: get_zalmoxis.sh  setup_zalmoxis.py
src/jord/: calculated_planet_mass_radius.txt  jord.py  jord2.py
src/plot/: plot_eos.py
src/tests/: MRtest.py  benchmark_phase_regimes.py  conftest.py  find_pressure_relaxation.py  plot_paleos_adiabat.py  plot_paleos_full_validation.py  plot_paleos_tables.py  plot_paleos_validation.py  plot_validation_G.py  profile_comparison_Boujibar_test.py  profile_comparison_Wagner_test.py  profile_comparison_test.py  test1.py  test2.py  test_MR.py  test_Seager.py  test_adiabatic.py  test_analytic_MR.py  test_analytic_eos.py  test_binodal.py  test_config_validation.py  test_convergence.py  test_convergence_PALEOS.py  test_convergence_RTPress100TPa.py  test_convergence_TdepEOS.py  test_eos_export.py  test_eos_functions.py  test_first_principles.py  test_grid_tools.py  test_melting_curves.py  test_miscibility.py  test_miscibility_integration.py  test_mixing.py  test_paleos.py  test_paleos_unified.py  test_plot_profiles.py
src/tools/: benchmark_paleos_eos.py  compare_zeng2019.py  convert_chabrier_to_paleos.py  generate_analytic_plots.py  generate_sigmoid_suppression_plot.py  generate_suppression_weights_plot.py  generate_validation_plots.py  melting_curves_monteux2016.py  paper_exec.py  paper_plot.ipynb  plot_grid.py  plot_grid_composition.py  plot_grid_profiles.py  plot_grid_pt.py  plot_paleos_adiabat.py  plot_paleos_full_validation.py  plot_paleos_tables.py  run_first_principles_validation.py  run_grid.py  run_parallel.py  run_ternary.py  setup_tests.py  setup_utils.py  validate_RTPress100TPa.py
src/zalmoxis/: __init__.py  __main__.py  binodal.py  config.py  constants.py  energetics.py  eos_analytic.py  eos_export.py  eos_functions.py  eos_properties.py  eos_vinet.py  lin_regr.py  melting_curves.py  mixing.py  output.py  phase_columns.py  setup.py  solver.py  structure_model.py  zalmoxis.py
testing/: index.html
tests/: _paleos_helpers.py  _paleos_mock.py  conftest.py  test_MR.py  test_MR_rocky.py  test_MR_water.py  test_Seager.py  test_Seager_rocky.py  test_Seager_water.py  test_adiabatic.py  test_analytic_MR.py  test_analytic_eos.py  test_anderson_acceleration.py  test_binodal.py  test_binodal_extras.py  test_config_branch_extras.py  test_config_loaders.py  test_config_validation.py  test_config_validators_extra.py  test_convergence.py  test_convergence_PALEOS.py  test_convergence_PALEOS_high_mass.py  test_convergence_RTPress100TPa.py  test_convergence_TdepEOS.py  test_dispatch_paleos_api.py  test_energetics.py  test_eos_dispatch_branches.py  test_eos_dispatch_failures.py  test_eos_export.py  test_eos_functions.py  test_eos_properties.py  test_eos_vinet.py  test_first_principles.py  test_grid_tools.py  test_jax_bilinear_parity.py  test_jax_event_termination.py  test_jax_paleos_parity.py  test_jax_rhs_parity.py  test_jax_solver_parity.py  test_jax_tdep_parity.py  (+32 more)
tests/data/: bench_performance.toml  bench_performance_baseline.npz
tools/: generate_test_badges.py  validate_test_structure.sh
tools/benchmarks/: bench_coupled_tempfunc.py  bench_performance.py  benchmark_paleos_eos.py  benchmark_phase_regimes.py
tools/converters/: compare_zeng2019.py  melting_curves_monteux2016.py
tools/grids/: plot_grid.py  run_grid.py  run_parallel.py  run_ternary.py
tools/plots/: _grid_io.py  generate_analytic_plots.py  generate_suppression_weights_plot.py  plot_MR.py  plot_animated_pressure_density_profiles.py  plot_eos.py  plot_grid_composition.py  plot_grid_profiles.py  plot_grid_pt.py  plot_melting_curves.py  plot_paleos_adiabat.py  plot_paleos_full_validation.py  plot_paleos_tables.py  plot_paleos_validation.py  plot_profiles.py  plot_profiles_all_in_one.py  plot_ternary.py
tools/setup/: get_zalmoxis.sh  setup_tests.py  setup_utils.py  setup_zalmoxis.py
tools/validation/: generate_validation_plots.py  plot_validation_G.py  plot_verification.py  run_first_principles_validation.py  validate_RTPress100TPa.py  validate_thermal_state.py  validate_thermal_state_full_paleos.py  validate_thermal_state_paleos.py
tools/validation_grid/: analyze_results.py  collect_results.py  run_single.py  (+5 more)
usage/: index.html
(+132 files in other folders)
