[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fwl-zalmoxis"
dynamic = ["version"]
description = "Zalmoxis (Planetary interior structure model)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Flavia Pascal", email = "fpascal@astro.rug.nl"},
]
keywords = [
    "Astronomy",
    "Exoplanets",
]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "scipy",
    "toml",
    "matplotlib",
    "python-ternary",
    "tqdm",
    "osfclient",
    "zenodo-get"
]

[project.scripts]
zalmoxis = "zalmoxis.solver:main"

[project.urls]
homepage = "https://github.com/FormingWorlds/Zalmoxis"
issues = "https://github.com/FormingWorlds/Zalmoxis/issues"
documentation = "https://proteus-framework.org/Zalmoxis/"
changelog = "https://github.com/FormingWorlds/Zalmoxis/releases"

[project.optional-dependencies]
develop = [
    "coverage[toml]",
    "pip-tools",
    "pytest >= 8.1",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "pytest-rich",
    "pytest-xdist"
]

docs = [
    "zensical",
    "markdown-include",
    "mkdocstrings[python]",
]

[tool.setuptools]
package-dir = {"zalmoxis" = "src/zalmoxis"}
include-package-data = true

[tool.setuptools_scm]
# CalVer: tags must be like v25.03.17 or 25.03.17
# setuptools-scm derives the version from the latest git tag.
# Between tags, it appends .devN+gHASH (e.g., 25.03.17.dev5+gabc1234).
version_file = "src/zalmoxis/_version.py"

[tool.coverage.run]
branch = true
source = ["zalmoxis"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v -n auto --dist loadfile"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "unit: Fast unit tests (<100ms, no solver calls)",
    "integration: Integration tests with full solver (10-60s each)",
    "slow: Slow convergence tests (minutes, full composition grids)",
]

[tool.ruff]
line-length = 96
target-version = "py312"
extend-exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",  # pycodestyle (warning)
    "I",  # isort
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party=["zalmoxis"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
