[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fwl-zalmoxis"
dynamic = ["version"]
description = "Zalmoxis (Planetary interior structure model)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Flavia Pascal", email = "fpascal@astro.rug.nl"},
]
keywords = [
    "Astronomy",
    "Exoplanets",
]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "scipy",
    "toml",
    "matplotlib",
    "python-ternary",
    "tqdm",
    "osfclient",
    "zenodo-get",
    "jax>=0.4.38",
    "diffrax>=0.7"
]

[project.scripts]
zalmoxis = "zalmoxis.solver:main"

[project.urls]
homepage = "https://github.com/FormingWorlds/Zalmoxis"
issues = "https://github.com/FormingWorlds/Zalmoxis/issues"
documentation = "https://proteus-framework.org/Zalmoxis/"
changelog = "https://github.com/FormingWorlds/Zalmoxis/releases"

[project.optional-dependencies]
develop = [
    "coverage[toml]",
    "pip-tools",
    "pytest >= 8.1",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "pytest-rich",
    "pytest-xdist"
]

docs = [
    "zensical",
    "markdown-include",
    "mkdocstrings[python]",
]

[tool.setuptools]
package-dir = {"zalmoxis" = "src/zalmoxis"}
include-package-data = true

[tool.setuptools_scm]
# CalVer: tags are bare YY.MM.DD dates (no leading 'v', e.g. 26.03.02).
# setuptools-scm derives the version from the latest git tag.
# version_scheme = "no-guess-dev" is required for CalVer: the default
# "guess-next-dev" would produce 26.3.3.devN+gHASH for commits after
# the 26.03.02 tag, claiming a future calendar date that will collide
# with the next daily release tag. "no-guess-dev" produces
# 26.03.02.post1.devN+gHASH instead, which is honest about the build
# being a post-tag development commit rather than a pre-release of
# the next version.
version_scheme = "no-guess-dev"
version_file = "src/zalmoxis/_version.py"

[tool.coverage.run]
branch = true
source = ["zalmoxis"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
# Hard 90% coverage gate. Per PROTEUS ecosystem policy this number is
# the maximum ratchet threshold for any module: it does not increase
# above 90% even if real coverage exceeds it. Above 90% you are
# tracking pragma usage and style, not bug-finding signal.
fail_under = 90.0
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v -n auto --dist loadfile --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "unit: Fast unit tests (<100ms, no solver calls)",
    "smoke: Single-mass solver runs that exercise the full code path with relaxed cost (1 M_earth only)",
    "integration: Real-physics integration tests against published references (PALEOS rocky 1 + 5 M_earth)",
    "slow: Slow convergence tests (minutes, full composition grids)",
]

[tool.ruff]
line-length = 96
target-version = "py312"
# _version.py is auto-generated by setuptools-scm at install/build time
# and lives under src/zalmoxis/ (gitignored). Excluding it keeps
# `ruff format --check` from failing on whatever quote style
# setuptools-scm chooses to emit.
extend-exclude = ["*ipynb", "**/_version.py"]

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",  # pycodestyle (warning)
    "I",  # isort
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party=["zalmoxis"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
